# nearjoin

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: scoring.md
examples/: README.md  customers_billing.csv  customers_crm.csv
scripts/: smoke.sh
src/nearjoin/: __init__.py  __main__.py  blocking.py  cli.py  errors.py  explain.py  joiner.py  normalize.py  scoring.py  similarity.py  tabular.py
tests/: conftest.py  test_blocking.py  test_cli.py  test_explain.py  test_joiner.py  test_normalize.py  test_scoring.py  test_similarity.py  test_tabular.py
