[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nearjoin"
version = "0.1.0"
description = "Fuzzy-join two datasets on names or addresses with explainable match scores."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["fuzzy-matching", "record-linkage", "csv", "deduplication", "data-cleaning", "reconciliation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
nearjoin = "nearjoin.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/nearjoin"
Repository = "https://github.com/JaydenCJ/nearjoin"
Issues = "https://github.com/JaydenCJ/nearjoin/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
